Corrected car squares collapsing on themselves

--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,50 @@
 body {
-	font-family: 'Cabin Sketch', cursive;
-	background-color: #EBDEF0;
-	font-size: 15px;
+/*	font-family: 'Cabin Sketch', cursive;*/	
+/*	font-family: 'Montserrat Subrayada', sans-serif;*/
+	font-family: 'Trade Winds', cursive;
+	background-color: rgb(34, 34, 34);
 	text-align: center;
-	color: white;
+	color: #79170A;
 }
 
+
 h1 {
-	color: 
+	font-size: 80px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+p {
+	color: #CC8875;
+	font-size: 25px;
 }
 
 #map {
 	display: flex;
 	flex-wrap: wrap;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	width: 432px;
-	margin: 170px auto;
+	margin: 0 auto;
 }
 
 .square {
 	border: 1px solid lightgrey;
-	background-color: lightgrey;
+	background-color: darkgrey;
 	width: 50px;
 	height: 50px;
 	margin: 1px;
 }
 
+#exit {
+	/*background-color: rgb(34, 34, 34);*/
+	border-right: 1px solid rgb(34, 34, 34);
+	border-left: 1px solid rgb(34, 34, 34);	
+	border-top: 1px solid #79170A;
+	border-bottom: 1px solid #79170A;
+}
+
 .wall {
 	background-image: url("images/brick-wall.jpeg");
+	border: 1px solid #79170A;
+
 }
